Fix: change pre overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,5 @@
   display: block;
   position: relative;
   height: 100%;
+  width: 100%;
 }
