--- a/src/app/core/component/change-lang.component.scss
+++ b/src/app/core/component/change-lang.component.scss
@@ -1,7 +1,7 @@
 :host {
   position: absolute;
-  right: 10px;
-  top: 20px;
+  right: min(10px, 2%);
+  top: 15px;
   z-index: 2;
 
   img {
