--- a/src/app/domain/help/help-page/help-page.component.scss
+++ b/src/app/domain/help/help-page/help-page.component.scss
@@ -1,10 +1,12 @@
 :host {
-  display: flex;
-
   section {
     margin: 0 auto;
     padding: 80px;
     max-width: 1000px;
+
+    pre {
+      overflow: auto;
+    }
 
     article {
       display: flex;
@@ -32,6 +34,7 @@
 
       img {
         margin: 0 auto;
+        width: 100%;
       }
 
       p {
@@ -89,7 +92,7 @@
     }
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 750px) {
     section {
       padding: 80px 20px !important;
     }
