--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ body {
 }
 
 .ngx-toastr {
-  width: 350px !important;
+  max-width: 350px !important;
 }
 
 .prettyprint {
